--- a/src/templates/film.handlebars
+++ b/src/templates/film.handlebars
@@ -1,4 +1,4 @@
-<article class="film_wrapper card">
+<article class="film_wrapper card clickable-card">
 	<div class="row">
 		<picture class="thumbnail">
 			<img src="https://image.tmdb.org/t/p/w600_and_h900_bestv2/{{ poster_path }}"></img>
@@ -6,8 +6,9 @@
 		<div class="card-content">
 			<h2>{{ title }}</h2>
 			<div>{{ overview }}</div>
-			<div><i class="far fa-calendar-alt"></i> {{ release_date }}</div>
+			<div><h3>Release</h3><i class="far fa-calendar-alt"></i> {{ release_date }}</div>
 			<div>
+				<h3>Voting </h3>
 				<span><i class="fas fa-signal"></i>{{ vote_average }}</span>
 				<span><i class="far fa-thumbs-up"></i>{{ vote_count }}</span>
 			</div>
