--- a/src/templates/filmDetails.handlebars
+++ b/src/templates/filmDetails.handlebars
@@ -28,7 +28,7 @@
 			</div>
 			<div>
 				<h3>Voting </h3>
-				<span><i class="fas fa-signal"></i>{{ vote_average }}</span>
+				<span><i class="fas fa-gratipay"></i>{{ vote_average }}</span>
 				<span><i class="far fa-thumbs-up"></i>{{ vote_count }}</span>
 			</div>
 		</div>
