--- a/src/templates/film.handlebars
+++ b/src/templates/film.handlebars
@@ -9,7 +9,7 @@
 			<div><h3>Release</h3><i class="far fa-calendar-alt"></i> {{ release_date }}</div>
 			<div>
 				<h3>Voting </h3>
-				<span><i class="fas fa-signal"></i>{{ vote_average }}</span>
+				<span><i class="fas fa-gratipay"></i>{{ vote_average }}</span>
 				<span><i class="far fa-thumbs-up"></i>{{ vote_count }}</span>
 			</div>
 		</div>
