Added loading for details template

--- a/src/templates/filmDetails.handlebars
+++ b/src/templates/filmDetails.handlebars
@@ -16,7 +16,7 @@
 		</div>
 		<div>
 			<h3>Production</h3>
-			<div>
+			<div>Companies: 
   				{{#each production_companies}}
 					{{ this.name }} | 
 				{{/each}}
